# ISA-2026-AI_Native_Dev-17001625

./: .env.example  .gitignore  ARCHITECTURE.md  App.tsx  ONBOARDING.md  README.md  docker-compose.yml  next.config.ts  package-lock.json  package.json  pyproject.toml  setup_gcs.py  vitest.config.ts
app/: README.md  index.html  package-lock.json  package.json
app/scripts/: captureShowcase.mjs
app/src/: index.css
assets/: pawsmatch-demo.webm
backend/: .env.example  ARCHITECTURE.md  Dockerfile  ONBOARDING.md  README.md  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/v1/: routes.py
backend/app/models/: schemas.py
backend/app/services/: ai_service.py  gamification_service.py  market_service.py
backend/scripts/: deploy-cloud-run.sh  smoke-test.sh
backend/tests/: conftest.py  test_api_endpoints.py  test_health_endpoint.py  test_market_service.py
docs/: diagrams.md  guided-debugging-report.md  onboarding-guide.md  smart-insurance.md  technical-architecture.md  testing-results.md
frontend/: ARCHITECTURE.md  Dockerfile  ONBOARDING.md  README.md  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts  vitest.setup.ts
frontend/frontend/: package-lock.json  package.json
frontend/tests/: health-card.test.tsx  use-market-data.test.tsx
src/: App.grader-smoke.test.tsx  App.test.tsx  App.tsx  instrumentation.ts
src/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  not-found.tsx  page.test.tsx  page.tsx
src/components/: MatchShelf.tsx  PetCard.tsx
src/config/: env.ts
src/data/: inventory.json  mockData.ts  (+1 more)
(+80 files in other folders)
